test/langtools/tools/javac/nested/StaticNestedNonStaticSuper.out
StaticNestedNonStaticSuper.java:10:23: compiler.err.non-static.cant.be.ref: kindname.variable, this
1 error
